@@ -1,20 +1,31 @@
 ThisBuild / version := "1.0.0"
 ThisBuild / scalaVersion := "3.5.1"
 ThisBuild / organization := "com.youtoo"
-ThisBuild / organizationName := "cqrs"
+ThisBuild / organizationName := "youtoo"
 
-lazy val core = ProjectRef(file("/ingestion/ingestion-src"), "core")
-lazy val postgres = ProjectRef(file("/ingestion/ingestion-src"), "postgres")
-lazy val ingestion = ProjectRef(file("/ingestion/ingestion-src"), "ingestion")
+lazy val core = ProjectRef(file("/youtoo/youtoo-src"), "core")
+lazy val postgres = ProjectRef(file("/youtoo/youtoo-src"), "postgres")
+lazy val ingestion = ProjectRef(file("/youtoo/youtoo-src"), "ingestion")
+lazy val migration = ProjectRef(file("/youtoo/youtoo-src"), "dataMigration")
 
 lazy val root = (project in file("."))
   .settings(
-    name := "cqrs-profiling",
+    name := "youtoo-profiling",
     fork := true,
+  )
+  .settings(
+    Compile / run / javaOptions ++= Seq(
+      "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+      "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
+      "--add-exports=java.base/sun.security.util=ALL-UNNAMED",
+    ),
   )
   .enablePlugins(JavaAppPackaging)
   .dependsOn(
     core,
     postgres,
     ingestion,
+    migration,
   )
